# TPDS--OSLA

./: .gitignore  README.md
Cholesky/: DBChol  DBChol.cu  DBCholgemm  DBCholgemm.cu  DBCholsyrk  DBCholsyrk.cu  FP64doubleleftcholesky  FP64doubleleftcholesky.cu  cusolverchol  cusolverchol.cu  dblk_leftchol_GEMMul8  dblk_leftchol_GEMMul8.cu  magma  magma.cu  magma_float_bench.csv  rebuild_magma_ilp64.sh  run_magma_float_bench.sh
Cholesky/include/: TensorBLAS.h  check_device.cuh  cuda_utils_check.hpp  kernelOther.h  tools.cuh  tslu.h
LU/: magma  magma.cu  run_magma_sweep.sh
QR/: magma  magma.cu  makefile  qr_with_q_double_20260305_225937.csv  qr_with_q_double_20260306_002051.csv  qr_with_q_float_20260305_224100.csv  qr_with_q_float_20260305_224404.csv  qr_with_q_float_20260306_000611.csv  run_qr_with_q_double.sh  run_qr_with_q_float.sh
QR/DBQR/ori/: .clang-tidy  .clangd  CMakeLists.txt  Makefile
QR/DBQR/ori/inc/: ReconstructWY.h  TSQR.h  TallShinnyQR.h  kernelReWY-double.h  kernelReWY.h
QR/DBQR/ori/src/: ReconstructWY.cu  ReconstructWY_float.cu  TSQR.cu  TSQR_float.cu  geqrf_check_double.cu  geqrf_check_double_gemmul8.cu  geqrf_check_single.cu  geqrf_check_single_gemmul8.cu  geqrf_double.cu  geqrf_double_gemmul8.cu  geqrf_single.cu  test_main.cu
QR/DBQR/ori/utils/: myutils.cu
QR/DBQR/ori/utils/inc/: errorcheck.h  myutils.h
